016_code2/grade.txt
Grading at 09/01/2021:18:27:25.162923
For commit ID 2cc715d948bba06eea2578174c3163ed10e32831
Grading at Wed Sep  1 14:27:25 EDT 2021
Checking code2.c for legal syntax
temp.c: In function ‘main’:
temp.c:34:3: error: ‘numStarts’ undeclared (first use in this function); did you mean ‘numStars’?
   numStarts = printTriangle(7);
   ^~~~~~~~~
   numStars
temp.c:34:3: note: each undeclared identifier is reported only once for each function it appears in
The code did not have legal syntax!

Overall Grade: F
